--- a/part/concept.tex
+++ b/part/concept.tex
@@ -19,13 +19,13 @@
 
 \footnotetext{Нагло скопипизженно с \href{https://en.wikipedia.org/wiki/Database}{вечно загнивающей}}
 
-И если с просто базами данных все более-менее понятно, то в тот момент, когда нам приходиться говорить о вопросах безопасности, все превращается в классическую задачу о двух стульях: как надо и как в законе написано. (Ну или пафосно перефразируя) Вопросы информационной безопасности баз данных целесообразно рассматривать с двух взаимодополняющих позиций \textcite{Al2015}[\textcite{Lihonosov2011}]\footnote{Мне стыдно указывать ресурс, где я взял этот кусок, так что пусть будет \href{http://www.e-biblio.ru/book/bib/01_informatika/b_baz_dan/sg.html\#_Toc327430692}{pornhub}}:
+И если с просто базами данных все более-менее понятно, то в тот момент, когда нам приходиться говорить о вопросах безопасности, все превращается в классическую задачу о двух стульях: как надо и как в законе написано. (Ну или пафосно перефразируя) Вопросы информационной безопасности баз данных целесообразно рассматривать с двух взаимодополняющих позиций \autocite{Lihonosov2011}\footnote{Мне стыдно указывать ресурс, где я взял этот кусок, так что пусть будет \href{http://www.e-biblio.ru/book/bib/01_informatika/b_baz_dan/sg.html\#_Toc327430692}{pornhub}}:
 \begin{itemize}
 	\item оценочные стандарты, направленные на классификацию информационных систем и средств их защиты по требованиям безопасности
 	\item технические спецификации, регламентирующие различные аспекты реализации средств защиты
 \end{itemize} 
 
-Попытка защищать все и сразу обречена на провал, так что довольно логичным кажется сосредоточится на обеспечении безопасности четырех уровней информационной системы:
+Попытка защищать все и сразу обречена на провал, так что довольно логичным кажется сосредоточится на обеспечении безопасности четырех уровней информационной системы \autocite{Lihonosov2011}:
 \begin{enumerate}
 	\item уровня прикладного программного обеспечения, отвечающего за взаимодействие с пользователем
 	\item уровня системы управления базами данных, обеспечивающего хранение и обработку данных информационной системы
@@ -60,9 +60,12 @@
 \end{grayquote}
 
 \subsubsection{Угрозы безопасности БД: общие и специфичные}
+Интуитивное понимание угрозы безопасности можно сформулировать как нарушение великолепной тройки: \sout{Трус, Балбес и Бывалый} конфиденциальность, целостность, доступность. Для формального диалога можно использовать что-то около\footnote{Нагло взято \href{https://studopedia.su/2_30378_ugrozi-informatsionnoy-bezopasnosti-baz-dannih.html}{отсюда}}:
+\begin{grayquote}
 \textbf{Угрозой информационной безопасности} автоматизированный информационной системе (АИС) назовем возможность воздействия на информацию, обрабатываемую в системе, приводящего к искажению, уничтожению, копированию, блокированию доступа к информации, а также возможность воздействия на компоненты информационной системы, приводящего к утрате, уничтожению или сбою функционирования носителя информации или средства управления программно-аппаратным комплексом системы.
+\end{grayquote}
 
-Сформулируем перечень внешних и внутренних угроз информационной безопасности баз данных.
+Для того, чтобы разобраться во всем зоопарке перечисленных воздействий на систему нам придется все это дело классифицировать. Для удобства будем сразу смотреть на это со стороны обороняющего, то есть по источнику воздействия. В этом контексте они довольно естественно разбиваются на внутренние и внешние. Для описания внешних угроз необходимо учитывать объекты воздействия. (Под объектами воздействия понимаются объекты, которые могут подвергнуться атакам или могут стать причиной их возникновения.) \autocite{Ytebov2008}
 
 Внешними дестабилизирующими факторами, создающими угрозы безопасности функционированию систем баз данных и СУБД, являются:
 \begin{itemize}
@@ -81,35 +84,95 @@
 	\item недостаточная эффективность используемых методов и средств обеспечения информационной безопасности в штатных или особых условиях эксплуатации системы
 \end{itemize}
 
-Угрозы, специфичные для систем управления базами данных:
+Если у вас разбегаются глаза, это нормально -- здесь перечислены атаки на всех уровнях. Что за уровни? Напоминаю:
+\begin{itemize}
+	\item На уровне сети
+	\begin{itemize}
+		\item Activex-объект
+		\item Интерфейсы: OLE DB, ADO, ODBC, JDBC
+		\item Протоколы: TCP/IP, IPX/SPX, Named Pipes, Multiprotocol
+		\item Рабочие станции
+		\item Серверы
+		\item Маршрут
+		\item URL
+	\end{itemize}
+	\item На уровне ОС
+	\begin{itemize}
+		\item Аппаратное обеспечение
+		\item Программное обеспечение
+		\item Файлы базы данных
+		\item Файлы журнала транзакций
+		\item Файлы резервного копирования
+		\item Transact-SQL, PLSQL
+		\item Службы: MSSQLServer, SQLServerАgent, TNSListener и т. д.
+	\end{itemize}
+	\item На уровне БД
+	\begin{itemize}
+		\item Пользователи
+		\item Роли
+		\item Роли приложения
+		\item Диаграммы
+		\item Представления
+		\item Таблицы
+		\item Хранимые процедуры
+		\item Определения по умолчанию
+		\item Правила
+		\item Функции
+		\item Тип данных
+	\end{itemize}
+\end{itemize}
+
+Дальше, также легко и непринужденно можно разбить все атаки на СУБД на:
 \begin{enumerate}
-	\item Угрозы конфиденциальности информации:
-		\begin{itemize}
-			\item инъекция SQL. Во многих приложениях используется динамический SQL -- формирование SQL-предложений кодом программы путем конкатенации строк и значений предметов. Зная структуру базы данных, злоумышленник может либо выполнить хранимую программу в запросе, либо закомментировать "легальные" фрагменты SQL-кода, внедрив, например, конструкцию UNION, запрос которой возвращает конфиденциальные данные
-			
-			\item логический вывод на основе функциональных зависимостей. Пример функциональной зависимости для схемы отношения (фамилия, имя, отчество, должность, зарплата): если должность = менеджер, то зарплата = 1200. В реальных БД при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение
-			
-			\item логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных можно задать ограничения целостности – логические условия, которым должны удовлетворять атрибуты кортежей. Причем ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменения данных в таблицу, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Выполняя многократные изменения данных и анализируя реакцию системы, злоумышленник может получить те сведения, к которым у него отсутствует непосредственный доступ. Также к этому виду угроз конфиденциальности относится анализ значений первичных/внешних ключей
-			
-			\item использование оператора UPDATE для получения конфиденциальной информации. В некоторых стандартах SQL пользователь, не обладая привилегией на выполнение оператора SELECT, мог выполнить оператор UPDATE со сколь угодно сложным логическим условием. Так как после выполнения оператора UPDATE сообщается, сколько строк он обработал, фактически пользователь мог узнать, существуют ли данные, удовлетворяющие этому условию
-		\end{itemize}
-	
-	\item Угрозы целостности информации:
-		\begin{itemize}
-			\item модификация данных в реляционных СУБД возможна с помощью SQL-операторов UPDATE, INSERT и DELETE. Потенциальная опасность возникает из-за того, что пользователь, обладающий соответствующими привилегиями, может модифицировать все записи в таблице. Ограничить множество записей, доступных для модификации, можно с помощью создания представлений с оператором CHECK, но этот (равно как и любой другой) требует предварительного осмысления существа задачи и соответствующего проектирования схемы
-		\end{itemize}
-	\item Угрозы доступности:
-		\begin{itemize}
-			\item использование свойств первичных и внешних ключей. В первую очередь сюда относится свойство уникальности первичных ключей и наличие ссылочной целосности. В том случае, если используются натуральные, а не генерируемые системой значения первичных ключей, можно создать такую ситуацию, когда в таблицу невозможно будет вставить новые записи, так как там уже будут записи с такими же значениями первичных ключей. Если в базе данных поддерживается ссылочная целостность, можно организовать невозможность удаления родительских записей, умышленно создав подчиненные записи. Важной особенностью реализации ссылочной целостности является вопрос об индексировании внешнего ключа. В том случае, если внешний ключ не проиндексирован, то при обновлении связанных записей, например, в СУБД Oracle возможна организация взаимной блокировки (dead-lock), что приведет к сбою транзакции
-			
-			\item блокировка записей при изменении. Заблокировав записи или всю таблицу, злоумышленник может на значительное время сделать ее недоступной для обновления
-			
-			\item загрузка системы бессмысленной работой. Простейший пример – выполнение запроса, содержащего декартово произведение двух больших отношений. При выдаче злоумышленником запроса вида SELECT * FROM Tab1, Tab1 ORDER BY 1, где мощность отношения (количества строк в таблицу Tab1) $N = 10000$, мощность результирующего отношения будет $N \times N = 10^8$. Вычисления соединения и сортировка результирующего отношения потребуют значительных ресурсов системы и отрицательно скажутся на производительности операций других пользователей
-		\end{itemize}
+	\item атаки на уровне ОС
+	\item атаки на уровне сети
+	\item атаки на уровне БД
+\end{enumerate}
+Атаки на ОС, в которых функционирует СУБД, возникают гораздо чаще, так как защитить ОС гораздо сложнее, чем СУБД. Это обусловлено тем, что число различных типов защищаемых объектов в современных ОС может достигать нескольких десятков, а число различных типов защищаемых информационных потоков -- нескольких сотен. Возможность практической реализации той или иной атаки на ОС в значительной мере определяется архитектурой и конфигурацией ОС. Тем не менее существуют атаки, которые могут быть направлены практически на любые ОС:
+\begin{enumerate}
+	\item Кража ключевой информации (паролей)
+	\item Подбор пароля
+	\item Сканирование жестких дисков компьютера
+	\item Превышение полномочий
+	\item Атаки класса <<Отказ в обслуживании>>
+\end{enumerate}
+Наиболее опасные атаки на СУБД исходят из сетей. На уровне сетевого
+программного обеспечения возможны следующие атаки на СУБД:
+\begin{enumerate}
+	\item Прослушивание канала
+	\item Перехват пакетов на маршрутизаторе
+	\item Создание ложного маршрутизатора
+	\item Навязывание пакетов
+	\item Атаки класса <<Отказ в обслуживании>>	
 \end{enumerate}
 
-\subsubsection{Требования безопасности БД}\footnote{Прошлый год}
-На основании угроз можно выделить следующий список требований к безопасности БД:
+Теперь спускаемся на уровень самой БД. Для простоты восприятия разобьем все кучкам угроз конфиденциальности, целостности и доступности(Опять же, согласно \autocite{Ytebov2008}):
+\begin{itemize}
+	\item К угрозам конфиденциальности информации можно отнести следующие:
+	\begin{enumerate}
+		\item Инъекция SQL. Во многих приложениях используется динамический SQL -- формирование SQL-предложений кодом программы путем конкатенации строк и значений параметров. Зная структуру базы данных, злоумышленник может либо выполнить хранимую программу в запросе, либо закомментировать <<легальные>> фрагменты SQL-кода, внедрив, например, конструкцию UNION, запрос которой возвращает конфиденциальные данные. В последнее время злоумышленник может использовать специальные программы, автоматизирующие процесс реализации подобных угроз.
+		
+		\item Логический вывод на основе функциональных зависимостей. Пусть дана схема отношения: $R(A_1,\ldots,A_n)$. Пусть $U = \{A_1,\ldots,A_n\}, X ,Y$ -- подмножества из $U$. $X$ функционально определяет $Y$, если в любом отношении $r$ со схемой $R(A_1,\ldots,A_n)$ не могут содержаться два кортежа с одинаковыми значениями атрибутов из $X$ и с различными из $Y$. В этом случае имеет место функциональная зависимость, обозначаемая $X \Rightarrow Y$ . В реальных БД при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение.
+		
+		\item Логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных можно задать ограничения целостности -- логические условия, которым должны удовлетворять атрибуты кортежей. При этом ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменить данные в таблице, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Многократно изменяя данные и анализируя реакцию системы, злоумышленник может получить те сведения, к которым	у него нет непосредственного доступа. К этому виду угроз можно отнести также анализ значений первичных/вторичных ключей.
+		
+		\item Использование оператора UPDATE для получения конфиденциальной информации. В некоторых стандартах SQL пользователь, не обладая привилегией на выполнение оператора SELECT, мог выполнить оператор UPDATE со сложным логическим условием. Так как после выполнения оператора UPDATE сообщается, сколько строк он обработал, фактически пользователь мог узнать, существуют ли данные, удовлетворяющие этому условию.
+	\end{enumerate}
+	\item К угрозам  целостности информации, специфические для СУБД можно отнести следующие:
+	\begin{enumerate}
+		\item С помощью SQL-операторов UPDATE, INSERT и DELETE можно изменить данные в СУБД. Опасность заключается в том, что пользователь, обладающий соответствующими привилегиями, может модифицировать все записи в таблице.
+	\end{enumerate}
+	\item К угрозам доступности для СУБД можно отнести следующие:
+	\begin{enumerate}
+		\item Использование свойств первичных и внешних ключей. В первую очередь отнесем сюда свойство уникальности первичных ключей и наличие ссылочной целостности. В том случае, если используются натуральные, а не генерируемые системой значения первичных ключей, может создаться такая ситуация, когда в таблицу невозможно будет вставить новые записи,	так как там уже будут записи с такими же значениями первичных ключей. Если в БД поддерживается ссылочная целостность, можно организовать невозможность удаления родительских записей, умышленно создав подчиненные записи.
+		\item Блокировка записей при изменении. Заблокировав записи или всю таблицу, злоумышленник может на значительное время сделать ее недоступной для обновления.
+		\item Загрузка системы бессмысленной работой. Злоумышленник может выполнить запрос, содержащий декартовое произведение двух больших отношений. Мощность декартового произведения двух отношений мощности $N_1$ и $N_2$ равна $N_1 \cdot N_2$. Это означает, что при выдаче злоумышленником запроса вида SELECT * FROM Tab1, Tab1 ORDER BY 1, где мощность отношения (количество строк в таблице Tab1) $N_1 = 10000$, мощность результирующего отношения будет $N = N^2_1 = 10000^2$. Вычисление соединения и сортировка результирующего отношения потребуют значительных ресурсов системы и отрицательно скажутся на производительности операций других пользователей.
+		\item Использование разрушающих программных средств. Например, атака типа <<троянский конь>> -- запуск пользователями программ, содержащих код, выполняющий определенные действия, внедренный туда злоумышленником. 
+	\end{enumerate}
+\end{itemize}
+
+\subsubsection{Требования безопасности БД}
+Если сильно постараться то, на основании угроз можно выделить следующий список требований к безопасности БД\footnote{За оригиналом \href{https://tproger.ru/articles/db-security-basics/}{сюда}}:
 \begin{itemize}
 	\item Функционирование в доверенной среде. Под доверенной средой следует понимать инфраструктуру предприятия и ее защитные механизмы, обусловленные политиками безопасности. Таким образом, речь идет о функционировании СУБД в соответствии с правилами безопасности, применяемыми и ко всем прочим системам предприятия
 	
@@ -122,74 +185,75 @@
 	\item Безопасная организация и работа с данными. Вопрос организации данных и управления ими является ключевым в системах хранения информации. В эту область входят задачи организации данных с контролем целостности и другие, специфичные для СУБД проблемы безопасности. Фактически эта задача включает в себя основной объем зависящих от данных уязвимостей и защиты от них
 \end{itemize}
 
+Но по хорошему надо добавить юр говна
 \subsubsection{Защита от несанкционированного доступа}\footnote{Прошлый год}
-К основным средствам защиты информации относят следующие:
-\begin{itemize}
-	\item идентификация и аутентификации
-	\item установление прав доступа к объектам БД
-	\item защита полей и записей таблиц БД
-	\item шифрование данных и программ
-\end{itemize}
-
-Простейший пример аутентификации это парольная защита. Парольная защита представляет простой и эффективный способ защиты БД от несанкционированного доступа. Пароли устанавлюваются конечным пользователями или администраторами БД и хранятся в определенных системных файлах СУБД в зашифрованном виде. Улучшенным вариантом является использование механизма SSL-аутентификации с использованием сертификатов.
-
-В целях контроля использования основных ресурсов СУБД во многих системах имеются средства установления прав доступа к объектам БД. Права доступа определяют возможные действия над объектами. Владелец объекта, а также администратор БД имеют все права. Остальные пользователи к разным объектам могут иметь различные уровни доступа.
-
-К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение). Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
-
-Итак, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических защитных мер, в первую очередь: введение ролевого управления доступа, организация доступа пользователей по предъявлению сертификата, выборочное шифрование для сегментов базы данных.
+%К основным средствам защиты информации относят следующие:
+%\begin{itemize}
+%	\item идентификация и аутентификации
+%	\item установление прав доступа к объектам БД
+%	\item защита полей и записей таблиц БД
+%	\item шифрование данных и программ
+%\end{itemize}
+%
+%Простейший пример аутентификации это парольная защита. Парольная защита представляет простой и эффективный способ защиты БД от несанкционированного доступа. Пароли устанавлюваются конечным пользователями или администраторами БД и хранятся в определенных системных файлах СУБД в зашифрованном виде. Улучшенным вариантом является использование механизма SSL-аутентификации с использованием сертификатов.
+%
+%В целях контроля использования основных ресурсов СУБД во многих системах имеются средства установления прав доступа к объектам БД. Права доступа определяют возможные действия над объектами. Владелец объекта, а также администратор БД имеют все права. Остальные пользователи к разным объектам могут иметь различные уровни доступа.
+%
+%К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение). Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
+%
+%Итак, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических защитных мер, в первую очередь: введение ролевого управления доступа, организация доступа пользователей по предъявлению сертификата, выборочное шифрование для сегментов базы данных.
 
 \subsubsection{Защита от вывода}\footnote{Взял href{http://www.e-biblio.ru/book/bib/01\_informatika/b\_baz\_dan/sg.html}{здесь}}
-
-Логический вывод на основе функциональных зависимостей. Пусть дана схема отношения: $R(A_1, \ldots, A_n)$. Пусть $U = (A_1, \ldots, A_n)$, $X$, $Y$ -- подмножества из $U$. Говорят, что Х функционально определяет Y, если в любом отношении $r$ со схемой $R(A_1, \ldots, A_n)$ не могут содержаться два кортежа с одинаковыми значениями атрибутов из Х, с различными из Y. В этом случае имеет место функциональная зависимость, обозначаемая . Пример функциональной зависимости для схемы отношения (фамилия, имя, отчество, должность, зарплата): если должность = менеджер, то зарплата = $1200$. В реальных базах данных при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение.
-
-Логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных (РМД) можно задать ограничения целостности — логические условия, которым должны удовлетворять атрибуты кортежей. Причем ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменения данных в таблице, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Выполняя многократные изменения данных и анализируя реакцию системы, злоумышленник может получить те сведения, к которым у него отсутствует непосредственный доступ. Также к этому виду угроз конфиденциальности относится анализ значений первичных/внешних ключей.
-
+%
+%Логический вывод на основе функциональных зависимостей. Пусть дана схема отношения: $R(A_1, \ldots, A_n)$. Пусть $U = (A_1, \ldots, A_n)$, $X$, $Y$ -- подмножества из $U$. Говорят, что Х функционально определяет Y, если в любом отношении $r$ со схемой $R(A_1, \ldots, A_n)$ не могут содержаться два кортежа с одинаковыми значениями атрибутов из Х, с различными из Y. В этом случае имеет место функциональная зависимость, обозначаемая . Пример функциональной зависимости для схемы отношения (фамилия, имя, отчество, должность, зарплата): если должность = менеджер, то зарплата = $1200$. В реальных базах данных при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение.
+%
+%Логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных (РМД) можно задать ограничения целостности — логические условия, которым должны удовлетворять атрибуты кортежей. Причем ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменения данных в таблице, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Выполняя многократные изменения данных и анализируя реакцию системы, злоумышленник может получить те сведения, к которым у него отсутствует непосредственный доступ. Также к этому виду угроз конфиденциальности относится анализ значений первичных/внешних ключей.
+%
 \subsubsection{Целостность БД}
-Целостность базы данных -- соответствие имеющейся в базе данных информации её внутренней логике, структуре и всем явно заданным правилам. Каждое правило, налагающее некоторое ограничение на возможное состояние базы данных, называется ограничением целостности.
-
-Очевидно, что ограничения должны быть формально объявлены для СУБД, после чего СУБД должна предписывать их выполнение. Объявление ограничений сводится просто к использованию соответствующих средств языка базы данных, а соблюдение ограничений осуществляется с помощью контроля со стороны СУБД над операциями обновления, которые могут нарушить эти ограничения, и запрещения тех операций, которые их действительно нарушают. При первоначальном объявлении ограничения система должна проверить, удовлетворяет ли ему в настоящий момент база данных. Если это условие не соблюдается, ограничение должно быть отвергнуто; в противном случае оно принимается (то есть записывается в каталог системы) и начиная с этого момента соблюдается.
-
-В теории реляционных баз данных принято выделять четыре типа ограничений целостности:
-\begin{itemize}
-	\item Ограничением базы данных называется ограничение на значения, которые разрешено принимать указанной базе данных.
-	\item Ограничением переменной отношения называется ограничение на значения, которые разрешено принимать указанной переменной отношения.
-	\item Ограничением атрибута называется ограничение на значения, которые разрешено принимать указанному атрибуту.
-	\item Ограничение типа представляет собой не что иное, как определение множества значений, из которых состоит данный тип.\footnote{Подробнее про ограничения: https://studfiles.net/preview/6354061/page:55/ (Блядский роскомнадзор будет ругаться, но вас это пугать не должно)}
-\end{itemize}
-
+%Целостность базы данных -- соответствие имеющейся в базе данных информации её внутренней логике, структуре и всем явно заданным правилам. Каждое правило, налагающее некоторое ограничение на возможное состояние базы данных, называется ограничением целостности.
+%
+%Очевидно, что ограничения должны быть формально объявлены для СУБД, после чего СУБД должна предписывать их выполнение. Объявление ограничений сводится просто к использованию соответствующих средств языка базы данных, а соблюдение ограничений осуществляется с помощью контроля со стороны СУБД над операциями обновления, которые могут нарушить эти ограничения, и запрещения тех операций, которые их действительно нарушают. При первоначальном объявлении ограничения система должна проверить, удовлетворяет ли ему в настоящий момент база данных. Если это условие не соблюдается, ограничение должно быть отвергнуто; в противном случае оно принимается (то есть записывается в каталог системы) и начиная с этого момента соблюдается.
+%
+%В теории реляционных баз данных принято выделять четыре типа ограничений целостности:
+%\begin{itemize}
+%	\item Ограничением базы данных называется ограничение на значения, которые разрешено принимать указанной базе данных.
+%	\item Ограничением переменной отношения называется ограничение на значения, которые разрешено принимать указанной переменной отношения.
+%	\item Ограничением атрибута называется ограничение на значения, которые разрешено принимать указанному атрибуту.
+%	\item Ограничение типа представляет собой не что иное, как определение множества значений, из которых состоит данный тип.\footnote{Подробнее про ограничения: https://studfiles.net/preview/6354061/page:55/ (Блядский роскомнадзор будет ругаться, но вас это пугать не должно)}
+%\end{itemize}
+%
 \subsubsection{Аудит}
-Важнейшей составляющей процесса обеспечения безопасности ИС является проведение квалифицированного аудита. Несмотря на то, что подготовка и проведение профессионального аудита безопасности ИС требует существенных финансовых и кадровых затрат, высшее руководство многих организаций считает подобные затраты оправданными.
-
-Проведение профессионального независимого аудита позволяет своевременно выявить существующие недостатки в системе обеспечения безопасности ИС и объективно оценить соответствие параметров, характеризующих режим обеспечения информационной безопасности, требуемому решаемыми задачами организации уровню.
-
-Ядром построения ИС предприятия является СУБД промышленного уровня, Полноценная система обеспечения безопаности ИС должна обладать развитыми средствами аудита, то есть, как минимум, СУБД должна обладать средствами автоматического ведения протоколов действий пользователей системы.
-
-В СУБД средство ведения аудита может быть реализовано в виде независимой утилиты (IBM DB2) или возможностей, управляемых языковыми средствами системы (Oracle). Средства аудита обычно ассоциированы с экземпляром, т. е. для каждого экземпляра сервера баз данных может быть запущен собственный файл аудита.
-
-Средства аудита выполняют фиксацию информации об активности пользователей системе в словаре данных или специальном файле – журнале аудита. Информация о настройках системы аудита хранятся в специальном конфигурационном файле. Файл настройки или параметры команды активизации аудита определяют перечень событий, которые фиксируются системой аудита.
-
-Пользователь, обладающий необходимыми полномочиями, может выполнять следующие действия со средствами аудита:
-\begin{itemize}
-	\item запускать и останавливать средства аудита;
-	\item просматривать состояние конфигурации средства аудита и настраивать средства аудита на фиксацию определенных событий;
-	\item переписывать данные аудита во внешние файлы операционной системы для проведения независимого анализа.
-\end{itemize}
+%Важнейшей составляющей процесса обеспечения безопасности ИС является проведение квалифицированного аудита. Несмотря на то, что подготовка и проведение профессионального аудита безопасности ИС требует существенных финансовых и кадровых затрат, высшее руководство многих организаций считает подобные затраты оправданными.
+%
+%Проведение профессионального независимого аудита позволяет своевременно выявить существующие недостатки в системе обеспечения безопасности ИС и объективно оценить соответствие параметров, характеризующих режим обеспечения информационной безопасности, требуемому решаемыми задачами организации уровню.
+%
+%Ядром построения ИС предприятия является СУБД промышленного уровня, Полноценная система обеспечения безопаности ИС должна обладать развитыми средствами аудита, то есть, как минимум, СУБД должна обладать средствами автоматического ведения протоколов действий пользователей системы.
+%
+%В СУБД средство ведения аудита может быть реализовано в виде независимой утилиты (IBM DB2) или возможностей, управляемых языковыми средствами системы (Oracle). Средства аудита обычно ассоциированы с экземпляром, т. е. для каждого экземпляра сервера баз данных может быть запущен собственный файл аудита.
+%
+%Средства аудита выполняют фиксацию информации об активности пользователей системе в словаре данных или специальном файле – журнале аудита. Информация о настройках системы аудита хранятся в специальном конфигурационном файле. Файл настройки или параметры команды активизации аудита определяют перечень событий, которые фиксируются системой аудита.
+%
+%Пользователь, обладающий необходимыми полномочиями, может выполнять следующие действия со средствами аудита:
+%\begin{itemize}
+%	\item запускать и останавливать средства аудита;
+%	\item просматривать состояние конфигурации средства аудита и настраивать средства аудита на фиксацию определенных событий;
+%	\item переписывать данные аудита во внешние файлы операционной системы для проведения независимого анализа.
+%\end{itemize}
 
 \subsubsection{Многоуровневая защита}
-\begin{enumerate}
-	\item Физическая защита
-	\begin{enumerate}
-		\item Прежде всего, необходима физическая защита информации: чтобы сервер с данными не был похищен. Для этого сервера располагают в охраняемом дата-центре с видеонаблюдением и ограниченным доступом лиц в эти помещения
-		\item Второй уровень физической защиты — обеспечение сохранности самих данных, содержащихся на этих серверах. Этот вопрос решается применением политики резервного копирования информации
-	\end{enumerate}
-	\item Защита ОС: Различные средства от НСД и прочее.
-	
-	\item Защита на уровне передачи данных: Передача данных тоже нуждается в защите, поскольку существует вероятность перехвата информации в момент ее транзита. Шифрование траффика позволяет защитить данные системы от перехвата снифферами и т.п.
-	
-	\item Авторизация в системе: Различные виды идентификации и аутентификации.
-	
-	\item Система прав и объектов: Различные модели разграничения доступа.
-\end{enumerate}
-
+%\begin{enumerate}
+%	\item Физическая защита
+%	\begin{enumerate}
+%		\item Прежде всего, необходима физическая защита информации: чтобы сервер с данными не был похищен. Для этого сервера располагают в охраняемом дата-центре с видеонаблюдением и ограниченным доступом лиц в эти помещения
+%		\item Второй уровень физической защиты — обеспечение сохранности самих данных, содержащихся на этих серверах. Этот вопрос решается применением политики резервного копирования информации
+%	\end{enumerate}
+%	\item Защита ОС: Различные средства от НСД и прочее.
+%	
+%	\item Защита на уровне передачи данных: Передача данных тоже нуждается в защите, поскольку существует вероятность перехвата информации в момент ее транзита. Шифрование траффика позволяет защитить данные системы от перехвата снифферами и т.п.
+%	
+%	\item Авторизация в системе: Различные виды идентификации и аутентификации.
+%	
+%	\item Система прав и объектов: Различные модели разграничения доступа.
+%\end{enumerate}
+%
 \subsubsection{Типы контроля безопасности: потоковый, контроль вывода, контроль доступа[None]}
