--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,17 +1,27 @@
 @article{Al2015,
-author = {Ал-Исауи Висам Чяад Карим, Смелов Владимир Владиславович, and Мороз Леонарда Станиславовна},
-journal = {Труды БГТУ. Серия 3: Физико-математические науки и информатика},
-number = {6},
-pages = {171--175},
-title = {{Обобщенная модель информационной безопасности системы управления базами данных}},
-url = {https://cyberleninka.ru/article/n/obobschennaya-model-informatsionnoy-bezopasnosti-sistemy-upravleniya-bazami-dannyh/viewer},
-year = {2015}
+	author = {Ал-Исауи Висам Чяад Карим, Смелов Владимир Владиславович, and Мороз Леонарда Станиславовна},
+	journal = {Труды БГТУ. Серия 3: Физико-математические науки и информатика},
+	number = {6},
+	pages = {171--175},
+	title = {{Обобщенная модель информационной безопасности системы управления базами данных}},
+	url = {https://cyberleninka.ru/article/n/obobschennaya-model-informatsionnoy-bezopasnosti-sistemy-upravleniya-bazami-dannyh/viewer},
+	year = {2015}
+}
+
+@article{Ytebov2008,
+	author = {Утебов Данияр Рашидович, Белов Сергей Валерьевич},
+	journal = {Вестник Астраханского государственного технического университета},
+	number = {1},
+	year = {2008},
+	pages = {87--92},
+	title = {{Классификация угроз в системах управления базами данных}},
+	url = {https://cyberleninka.ru/article/n/klassifikatsiya-ugroz-v-sistemah-upravleniya-bazami-dannyh/viewer}
 }
 
 @online{Lihonosov2011,
     author = {{Лихоносов А. Г.}},
-    title = {{Интернет-курс по дисциплине "Безопасность баз данных"}},
+    title = {{Интернет-курс по дисциплине Безопасность баз данных}},
     url = {http://www.e-biblio.ru/book/bib/01_informatika/b_baz_dan/sg.html},
     urldate = {2020-03-01},
-    year=2011
+    year={2011}
 }
