--- a/db.tex
+++ b/db.tex
@@ -13,7 +13,7 @@
 	Ведь для самых важных дел в принципе лучше времени нет}{Anacondaz - Факап}
 \tableofcontents
 \input{part/concept}
-\input{part/basis}
+%\input{part/basis}
 %\input{part/integrity}
 %\input{part/confidentiality}
 %\input{part/availability}
@@ -21,6 +21,6 @@
 %\input{part/statistical}
 %\input{part/intrusion}
 %\input{part/security}
-\input{part/ref}
+%\input{part/ref}
 \printbibliography
 \end{document}
